# Minor_Project-

./: .gitignore  README.md
backend/: api_server.py  pyproject.toml  requirements.txt  simple_server.py  stock_market_server.py
frontend/: package-lock.json  package.json  reference.txt  webflow.css
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/about-app/: page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/app/forgot-password/: page.tsx
frontend/src/app/home/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: AboutNavbar.tsx  BrandTrust.tsx  ChatBot.tsx  Features.tsx  Footer.tsx  Hero.tsx  HomeAbout.tsx  HomeNavbar.tsx  LandingNavbar.tsx  Navbar.tsx  RiskResult.tsx  WorkSection.tsx
frontend/src/components/ui/: AnimatedButton.tsx  SlotCounter.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: auth.ts
